--- a/rest-api/pom.xml
+++ b/rest-api/pom.xml
@@ -83,6 +83,7 @@
 	</dependencies>
 
 	<profiles>
+
 		<profile>
 			<id>macos-m1</id>
 			<activation>
@@ -99,6 +100,28 @@
 				</dependency>
 			</dependencies>
 		</profile>
+
+		<profile>
+			<id>native</id>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.graalvm.buildtools</groupId>
+						<artifactId>native-maven-plugin</artifactId>
+						<executions>
+							<execution>
+								<id>build-native</id>
+								<goals>
+									<goal>compile-no-fork</goal>
+								</goals>
+								<phase>package</phase>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+
 	</profiles>
 
 	<build>
@@ -142,6 +165,14 @@
 							<artifactId>lombok</artifactId>
 						</exclude>
 					</excludes>
+				</configuration>
+			</plugin>
+
+			<plugin>
+				<groupId>org.graalvm.buildtools</groupId>
+				<artifactId>native-maven-plugin</artifactId>
+				<configuration>
+					<skipNativeTests>true</skipNativeTests>
 				</configuration>
 			</plugin>
 
